# zerocoder

./: .gitignore  CLAUDE.md  README.md  readme.txt  settings.local.json
.claude/: settings.local.json
architect/: manifest.md
architect/diagrams/: config.startup.mmd  ingestion.upload.mmd
architect/specs/: config.spec.md  ingestion.spec.md  viewer.spec.md
changelog/: CHANGELOG.md
release/backend/go/: Makefile  go.mod  go.sum
release/backend/python/: pyproject.toml
release/docs/: INSTALL.md  README.md  USAGE.md
release/frontend/: README.md  angular.json  package-lock.json  package.json
release/frontend/src/: index.html  styles.scss
release/frontend/src/app/: app.ts  (+4 more)
sample-logs/proxy/: access.log00001  proxy.log00001  proxy.out  proxy.out00001  proxy.out00002  proxy.out00003
sample-logs/weblogic/: AdminServer.log00001  AdminServer.log00002  AdminServer.out  AdminServer.out00001  AdminServer.out00002  nodemanager.out
sample-logs/weblogic/1/: AdminServer.log00010  AdminServer.out
sh/: .gitignore  make-dist.sh  start-la.sh  status-la.sh  stop-la.sh
user-stories/: README.md  US-0001-config-and-db-bootstrap.json  US-0001-config-and-db-bootstrap.md  US-0002-upload-and-ingest-log-files.json  US-0002-upload-and-ingest-log-files.md  US-0003-log-viewer-frontend.json  US-0003-log-viewer-frontend.md  US-0004-viewer-backend-support.json  US-0004-viewer-backend-support.md  US-0005-cross-file-time-correlation.json  US-0005-cross-file-time-correlation.md  US-0006-viewer-presets-annotations-regex-stacked.json  US-0006-viewer-presets-annotations-regex-stacked.md
(+63 files in other folders)
