[project]
name = "dev-agent-python"
version = "0.0.0"
description = "dev-agent — вторичный Python/FastAPI-таргет (собирается по запросу)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]